[gd_scene load_steps=4 format=3 uid="uid://bi2q2fkcapp57"]

[ext_resource type="Script" path="res://Scripts/Metronome.gd" id="1_0gnaa"]
[ext_resource type="AudioStream" uid="uid://bbofu765krntm" path="res://Assets/Audio/Cerb Snare.wav" id="2_jb5am"]
[ext_resource type="AudioStream" uid="uid://bsxw1wfj306xk" path="res://Assets/Audio/Sucellos Nice.mp3" id="3_vs4od"]

[node name="InteractiveAudioManager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0gnaa")
bpmInput = 120.0

[node name="Beat" type="Timer" parent="."]

[node name="beatone_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_jb5am")
volume_db = -6.0
max_polyphony = 4

[node name="beattwo_Nice" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_vs4od")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 489.0
offset_top = 178.0
offset_right = 592.0
offset_bottom = 230.0
text = "Queue Main"

[node name="Button2" type="Button" parent="."]
layout_mode = 0
offset_left = 492.0
offset_top = 251.0
offset_right = 596.0
offset_bottom = 305.0
text = "Queue Fill"

[connection signal="timeout" from="Beat" to="." method="_on_beat_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
